--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/material": "^7.0.2",
+    "@mui/x-data-grid": "^8.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
@@ -22,6 +26,7 @@
     "react-router-dom": "^7.5.1",
     "react-spinners": "^0.16.1",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.4",
     "yup": "^1.6.1"
   },
